// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test on dynamic-sidebar return course component 1`] = `
Array [
  <Course
    history={
      Object {
        "number": 1,
      }
    }
  />,
]
`;

exports[`Test on dynamic-sidebar should render Query 1`] = `
<MockedProvider
  addTypename={false}
  mocks={
    Array [
      Object {
        "request": Object {
          "query": Object {
            "definitions": Array [
              Object {
                "directives": Array [],
                "kind": "OperationDefinition",
                "name": undefined,
                "operation": "query",
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "selections": Array [
                    Object {
                      "alias": null,
                      "arguments": Array [
                        Object {
                          "kind": "Argument",
                          "name": Object {
                            "kind": "Name",
                            "value": "orderBy",
                          },
                          "value": Object {
                            "kind": "EnumValue",
                            "value": "id_DESC",
                          },
                        },
                        Object {
                          "kind": "Argument",
                          "name": Object {
                            "kind": "Name",
                            "value": "first",
                          },
                          "value": Object {
                            "kind": "IntValue",
                            "value": "5",
                          },
                        },
                      ],
                      "directives": Array [],
                      "kind": "Field",
                      "name": Object {
                        "kind": "Name",
                        "value": "allPageHistories",
                      },
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "id",
                            },
                            "selectionSet": null,
                          },
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "number",
                            },
                            "selectionSet": null,
                          },
                        ],
                      },
                    },
                    Object {
                      "alias": null,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "name": Object {
                        "kind": "Name",
                        "value": "name",
                      },
                      "selectionSet": null,
                    },
                  ],
                },
                "variableDefinitions": Array [],
              },
            ],
            "kind": "Document",
            "loc": Object {
              "end": 183,
              "start": 0,
            },
          },
          "refetchQueries": Array [
            Object {
              "query": Object {
                "definitions": Array [
                  Object {
                    "directives": Array [],
                    "kind": "OperationDefinition",
                    "name": null,
                    "operation": "query",
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [
                            Object {
                              "kind": "Argument",
                              "name": Object {
                                "kind": "Name",
                                "value": "orderBy",
                              },
                              "value": Object {
                                "kind": "EnumValue",
                                "value": "id_DESC",
                              },
                            },
                            Object {
                              "kind": "Argument",
                              "name": Object {
                                "kind": "Name",
                                "value": "first",
                              },
                              "value": Object {
                                "kind": "IntValue",
                                "value": "5",
                              },
                            },
                          ],
                          "directives": Array [],
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "allPageHistories",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "id",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "number",
                                },
                                "selectionSet": null,
                              },
                            ],
                          },
                        },
                      ],
                    },
                    "variableDefinitions": null,
                  },
                ],
                "kind": "Document",
                "loc": Object {
                  "end": 166,
                  "start": 0,
                },
              },
            },
          ],
        },
        "result": Object {
          "data": Object {
            "allPageHistories": Object {},
          },
        },
      },
    ]
  }
>
  <ApolloProvider
    client={
      ApolloClient {
        "__operations_cache__": Map {
          "data" => Object {
            "query": Object {
              "definitions": Array [
                Object {
                  "directives": Array [],
                  "kind": "OperationDefinition",
                  "name": null,
                  "operation": "query",
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "alias": null,
                        "arguments": Array [
                          Object {
                            "kind": "Argument",
                            "name": Object {
                              "kind": "Name",
                              "value": "orderBy",
                            },
                            "value": Object {
                              "kind": "EnumValue",
                              "value": "id_DESC",
                            },
                          },
                          Object {
                            "kind": "Argument",
                            "name": Object {
                              "kind": "Name",
                              "value": "first",
                            },
                            "value": Object {
                              "kind": "IntValue",
                              "value": "5",
                            },
                          },
                        ],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "allPageHistories",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "id",
                              },
                              "selectionSet": null,
                            },
                            Object {
                              "alias": null,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "number",
                              },
                              "selectionSet": null,
                            },
                          ],
                        },
                      },
                    ],
                  },
                  "variableDefinitions": null,
                },
              ],
              "kind": "Document",
              "loc": Object {
                "end": 166,
                "start": 0,
              },
            },
            "variables": undefined,
          },
        },
        "cache": InMemoryCache {
          "addTypename": false,
          "config": Object {
            "addTypename": false,
            "dataIdFromObject": [Function],
            "fragmentMatcher": HeuristicFragmentMatcher {},
            "storeFactory": [Function],
          },
          "data": ObjectCache {
            "data": Object {},
          },
          "optimistic": Array [],
          "silenceBroadcast": false,
          "typenameDocumentCache": WeakMap {},
          "watches": Array [
            Object {
              "callback": [Function],
              "optimistic": true,
              "previousResult": [Function],
              "query": Object {
                "definitions": Array [
                  Object {
                    "directives": Array [],
                    "kind": "OperationDefinition",
                    "name": null,
                    "operation": "query",
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [
                            Object {
                              "kind": "Argument",
                              "name": Object {
                                "kind": "Name",
                                "value": "orderBy",
                              },
                              "value": Object {
                                "kind": "EnumValue",
                                "value": "id_DESC",
                              },
                            },
                            Object {
                              "kind": "Argument",
                              "name": Object {
                                "kind": "Name",
                                "value": "first",
                              },
                              "value": Object {
                                "kind": "IntValue",
                                "value": "5",
                              },
                            },
                          ],
                          "directives": Array [],
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "allPageHistories",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "id",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "number",
                                },
                                "selectionSet": null,
                              },
                            ],
                          },
                        },
                      ],
                    },
                    "variableDefinitions": null,
                  },
                ],
                "kind": "Document",
                "loc": Object {
                  "end": 166,
                  "start": 0,
                },
              },
              "variables": undefined,
            },
          ],
        },
        "defaultOptions": Object {},
        "disableNetworkFetches": false,
        "link": ApolloLink {
          "request": [Function],
        },
        "mutate": [Function],
        "query": [Function],
        "queryDeduplication": true,
        "queryManager": QueryManager {
          "dataStore": DataStore {
            "cache": InMemoryCache {
              "addTypename": false,
              "config": Object {
                "addTypename": false,
                "dataIdFromObject": [Function],
                "fragmentMatcher": HeuristicFragmentMatcher {},
                "storeFactory": [Function],
              },
              "data": ObjectCache {
                "data": Object {},
              },
              "optimistic": Array [],
              "silenceBroadcast": false,
              "typenameDocumentCache": WeakMap {},
              "watches": Array [
                Object {
                  "callback": [Function],
                  "optimistic": true,
                  "previousResult": [Function],
                  "query": Object {
                    "definitions": Array [
                      Object {
                        "directives": Array [],
                        "kind": "OperationDefinition",
                        "name": null,
                        "operation": "query",
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [
                                Object {
                                  "kind": "Argument",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "orderBy",
                                  },
                                  "value": Object {
                                    "kind": "EnumValue",
                                    "value": "id_DESC",
                                  },
                                },
                                Object {
                                  "kind": "Argument",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "first",
                                  },
                                  "value": Object {
                                    "kind": "IntValue",
                                    "value": "5",
                                  },
                                },
                              ],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "allPageHistories",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "number",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                          ],
                        },
                        "variableDefinitions": null,
                      },
                    ],
                    "kind": "Document",
                    "loc": Object {
                      "end": 166,
                      "start": 0,
                    },
                  },
                  "variables": undefined,
                },
              ],
            },
          },
          "deduplicator": ApolloLink {
            "request": [Function],
          },
          "fetchQueryPromises": Map {
            "2" => Object {
              "reject": [Function],
              "resolve": [Function],
            },
          },
          "idCounter": 3,
          "link": ApolloLink {
            "request": [Function],
          },
          "mutationStore": MutationStore {
            "store": Object {},
          },
          "onBroadcast": [Function],
          "queries": Map {
            "1" => Object {
              "cancel": [Function],
              "document": Object {
                "definitions": Array [
                  Object {
                    "directives": Array [],
                    "kind": "OperationDefinition",
                    "name": null,
                    "operation": "query",
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [
                            Object {
                              "kind": "Argument",
                              "name": Object {
                                "kind": "Name",
                                "value": "orderBy",
                              },
                              "value": Object {
                                "kind": "EnumValue",
                                "value": "id_DESC",
                              },
                            },
                            Object {
                              "kind": "Argument",
                              "name": Object {
                                "kind": "Name",
                                "value": "first",
                              },
                              "value": Object {
                                "kind": "IntValue",
                                "value": "5",
                              },
                            },
                          ],
                          "directives": Array [],
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "allPageHistories",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "id",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "number",
                                },
                                "selectionSet": null,
                              },
                            ],
                          },
                        },
                      ],
                    },
                    "variableDefinitions": null,
                  },
                ],
                "kind": "Document",
                "loc": Object {
                  "end": 166,
                  "start": 0,
                },
              },
              "invalidate": false,
              "invalidated": false,
              "lastRequestId": 2,
              "listeners": Array [
                [Function],
              ],
              "newData": null,
              "observableQuery": ObservableQuery {
                "_subscriber": [Function],
                "isCurrentlyPolling": false,
                "isTornDown": false,
                "observers": Array [
                  SubscriptionObserver {
                    "_subscription": Subscription {
                      "_cleanup": [Function],
                      "_observer": Object {
                        "error": [Function],
                        "next": [Function],
                      },
                      "_queue": undefined,
                      "_state": "ready",
                    },
                  },
                ],
                "options": Object {
                  "context": Object {},
                  "metadata": Object {
                    "reactComponent": Object {
                      "displayName": "Query",
                    },
                  },
                  "notifyOnNetworkStatusChange": false,
                  "query": Object {
                    "definitions": Array [
                      Object {
                        "directives": Array [],
                        "kind": "OperationDefinition",
                        "name": null,
                        "operation": "query",
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": null,
                              "arguments": Array [
                                Object {
                                  "kind": "Argument",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "orderBy",
                                  },
                                  "value": Object {
                                    "kind": "EnumValue",
                                    "value": "id_DESC",
                                  },
                                },
                                Object {
                                  "kind": "Argument",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "first",
                                  },
                                  "value": Object {
                                    "kind": "IntValue",
                                    "value": "5",
                                  },
                                },
                              ],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "allPageHistories",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": null,
                                  },
                                  Object {
                                    "alias": null,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "number",
                                    },
                                    "selectionSet": null,
                                  },
                                ],
                              },
                            },
                          ],
                        },
                        "variableDefinitions": null,
                      },
                    ],
                    "kind": "Document",
                    "loc": Object {
                      "end": 166,
                      "start": 0,
                    },
                  },
                },
                "queryId": "1",
                "queryManager": [Circular],
                "scheduler": QueryScheduler {
                  "inFlightQueries": Object {},
                  "intervalQueries": Object {},
                  "pollingTimers": Object {},
                  "queryManager": [Circular],
                  "registeredQueries": Object {},
                  "ssrMode": false,
                },
                "shouldSubscribe": true,
                "subscriptionHandles": Array [],
                "variables": Object {},
              },
              "subscriptions": Array [],
            },
          },
          "queryDeduplication": true,
          "queryIdsByName": Object {},
          "queryStore": QueryStore {
            "store": Object {
              "1": Object {
                "document": Object {
                  "definitions": Array [
                    Object {
                      "directives": Array [],
                      "kind": "OperationDefinition",
                      "name": null,
                      "operation": "query",
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [
                              Object {
                                "kind": "Argument",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "orderBy",
                                },
                                "value": Object {
                                  "kind": "EnumValue",
                                  "value": "id_DESC",
                                },
                              },
                              Object {
                                "kind": "Argument",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "first",
                                },
                                "value": Object {
                                  "kind": "IntValue",
                                  "value": "5",
                                },
                              },
                            ],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "allPageHistories",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "id",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "number",
                                  },
                                  "selectionSet": null,
                                },
                              ],
                            },
                          },
                        ],
                      },
                      "variableDefinitions": null,
                    },
                  ],
                  "kind": "Document",
                  "loc": Object {
                    "end": 166,
                    "start": 0,
                  },
                },
                "graphQLErrors": Array [],
                "metadata": Object {
                  "reactComponent": Object {
                    "displayName": "Query",
                  },
                },
                "networkError": null,
                "networkStatus": 1,
                "previousVariables": null,
                "variables": Object {},
              },
            },
          },
          "scheduler": QueryScheduler {
            "inFlightQueries": Object {},
            "intervalQueries": Object {},
            "pollingTimers": Object {},
            "queryManager": [Circular],
            "registeredQueries": Object {},
            "ssrMode": false,
          },
        },
        "reFetchObservableQueries": [Function],
        "resetStore": [Function],
        "resetStoreCallbacks": Array [],
        "ssrMode": false,
        "store": DataStore {
          "cache": InMemoryCache {
            "addTypename": false,
            "config": Object {
              "addTypename": false,
              "dataIdFromObject": [Function],
              "fragmentMatcher": HeuristicFragmentMatcher {},
              "storeFactory": [Function],
            },
            "data": ObjectCache {
              "data": Object {},
            },
            "optimistic": Array [],
            "silenceBroadcast": false,
            "typenameDocumentCache": WeakMap {},
            "watches": Array [
              Object {
                "callback": [Function],
                "optimistic": true,
                "previousResult": [Function],
                "query": Object {
                  "definitions": Array [
                    Object {
                      "directives": Array [],
                      "kind": "OperationDefinition",
                      "name": null,
                      "operation": "query",
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [
                              Object {
                                "kind": "Argument",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "orderBy",
                                },
                                "value": Object {
                                  "kind": "EnumValue",
                                  "value": "id_DESC",
                                },
                              },
                              Object {
                                "kind": "Argument",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "first",
                                },
                                "value": Object {
                                  "kind": "IntValue",
                                  "value": "5",
                                },
                              },
                            ],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "allPageHistories",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "id",
                                  },
                                  "selectionSet": null,
                                },
                                Object {
                                  "alias": null,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "name": Object {
                                    "kind": "Name",
                                    "value": "number",
                                  },
                                  "selectionSet": null,
                                },
                              ],
                            },
                          },
                        ],
                      },
                      "variableDefinitions": null,
                    },
                  ],
                  "kind": "Document",
                  "loc": Object {
                    "end": 166,
                    "start": 0,
                  },
                },
                "variables": undefined,
              },
            ],
          },
        },
        "version": "2.3.4",
        "watchQuery": [Function],
      }
    }
  >
    <History>
      <Query
        query={
          Object {
            "definitions": Array [
              Object {
                "directives": Array [],
                "kind": "OperationDefinition",
                "name": null,
                "operation": "query",
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "selections": Array [
                    Object {
                      "alias": null,
                      "arguments": Array [
                        Object {
                          "kind": "Argument",
                          "name": Object {
                            "kind": "Name",
                            "value": "orderBy",
                          },
                          "value": Object {
                            "kind": "EnumValue",
                            "value": "id_DESC",
                          },
                        },
                        Object {
                          "kind": "Argument",
                          "name": Object {
                            "kind": "Name",
                            "value": "first",
                          },
                          "value": Object {
                            "kind": "IntValue",
                            "value": "5",
                          },
                        },
                      ],
                      "directives": Array [],
                      "kind": "Field",
                      "name": Object {
                        "kind": "Name",
                        "value": "allPageHistories",
                      },
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "id",
                            },
                            "selectionSet": null,
                          },
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "number",
                            },
                            "selectionSet": null,
                          },
                        ],
                      },
                    },
                  ],
                },
                "variableDefinitions": null,
              },
            ],
            "kind": "Document",
            "loc": Object {
              "end": 166,
              "start": 0,
            },
          }
        }
      >
        <p>
          Loading...
        </p>
      </Query>
    </History>
  </ApolloProvider>
</MockedProvider>
`;

exports[`Test on dynamic-sidebar should render mutation 1`] = `
<MockedProvider
  addTypename={true}
  mocks={
    Array [
      Object {
        "request": Object {
          "query": Object {
            "definitions": Array [
              Object {
                "directives": Array [],
                "kind": "OperationDefinition",
                "name": undefined,
                "operation": "mutation",
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "selections": Array [
                    Object {
                      "alias": null,
                      "arguments": Array [
                        Object {
                          "kind": "Argument",
                          "name": Object {
                            "kind": "Name",
                            "value": "number",
                          },
                          "value": Object {
                            "kind": "IntValue",
                            "value": "12",
                          },
                        },
                      ],
                      "directives": Array [],
                      "kind": "Field",
                      "name": Object {
                        "kind": "Name",
                        "value": "createPageHistory",
                      },
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "selections": Array [
                          Object {
                            "alias": null,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "name": Object {
                              "kind": "Name",
                              "value": "number",
                            },
                            "selectionSet": null,
                          },
                        ],
                      },
                    },
                  ],
                },
                "variableDefinitions": Array [],
              },
            ],
            "kind": "Document",
            "loc": Object {
              "end": 170,
              "start": 0,
            },
          },
          "variables": Object {
            "name": "Test",
          },
        },
        "result": Object {
          "data": Object {},
        },
      },
    ]
  }
>
  <ApolloProvider
    client={
      ApolloClient {
        "__operations_cache__": Map {},
        "cache": InMemoryCache {
          "addTypename": true,
          "config": Object {
            "addTypename": true,
            "dataIdFromObject": [Function],
            "fragmentMatcher": HeuristicFragmentMatcher {},
            "storeFactory": [Function],
          },
          "data": ObjectCache {
            "data": Object {},
          },
          "optimistic": Array [],
          "silenceBroadcast": false,
          "typenameDocumentCache": WeakMap {},
          "watches": Array [],
        },
        "defaultOptions": Object {},
        "disableNetworkFetches": false,
        "link": ApolloLink {
          "request": [Function],
        },
        "mutate": [Function],
        "query": [Function],
        "queryDeduplication": true,
        "queryManager": QueryManager {
          "dataStore": DataStore {
            "cache": InMemoryCache {
              "addTypename": true,
              "config": Object {
                "addTypename": true,
                "dataIdFromObject": [Function],
                "fragmentMatcher": HeuristicFragmentMatcher {},
                "storeFactory": [Function],
              },
              "data": ObjectCache {
                "data": Object {},
              },
              "optimistic": Array [],
              "silenceBroadcast": false,
              "typenameDocumentCache": WeakMap {},
              "watches": Array [],
            },
          },
          "deduplicator": ApolloLink {
            "request": [Function],
          },
          "fetchQueryPromises": Map {},
          "idCounter": 2,
          "link": ApolloLink {
            "request": [Function],
          },
          "mutationStore": MutationStore {
            "store": Object {
              "1": Object {
                "error": null,
                "loading": true,
                "mutationString": "mutation {
  createPageHistory(number: 5) {
    number
    __typename
  }
}
",
                "variables": Object {},
              },
            },
          },
          "onBroadcast": [Function],
          "queries": Map {
            "1" => Object {
              "document": Object {
                "definitions": Array [
                  Object {
                    "directives": Array [],
                    "kind": "OperationDefinition",
                    "name": undefined,
                    "operation": "mutation",
                    "selectionSet": Object {
                      "kind": "SelectionSet",
                      "selections": Array [
                        Object {
                          "alias": null,
                          "arguments": Array [
                            Object {
                              "kind": "Argument",
                              "name": Object {
                                "kind": "Name",
                                "value": "number",
                              },
                              "value": Object {
                                "kind": "IntValue",
                                "value": "5",
                              },
                            },
                          ],
                          "directives": Array [],
                          "kind": "Field",
                          "name": Object {
                            "kind": "Name",
                            "value": "createPageHistory",
                          },
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "number",
                                },
                                "selectionSet": null,
                              },
                              Object {
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "__typename",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                    "variableDefinitions": Array [],
                  },
                ],
                "kind": "Document",
                "loc": Object {
                  "end": 87,
                  "source": Object {
                    "body": "
    mutation {
      createPageHistory(number: 5) {
        number
      }
    },
    ",
                    "locationOffset": Object {
                      "column": 1,
                      "line": 1,
                    },
                    "name": "GraphQL request",
                  },
                  "start": 0,
                },
              },
              "invalidated": false,
              "lastRequestId": null,
              "listeners": Array [],
              "newData": null,
              "observableQuery": null,
              "subscriptions": Array [],
            },
          },
          "queryDeduplication": true,
          "queryIdsByName": Object {},
          "queryStore": QueryStore {
            "store": Object {},
          },
          "scheduler": QueryScheduler {
            "inFlightQueries": Object {},
            "intervalQueries": Object {},
            "pollingTimers": Object {},
            "queryManager": [Circular],
            "registeredQueries": Object {},
            "ssrMode": false,
          },
        },
        "reFetchObservableQueries": [Function],
        "resetStore": [Function],
        "resetStoreCallbacks": Array [],
        "ssrMode": false,
        "store": DataStore {
          "cache": InMemoryCache {
            "addTypename": true,
            "config": Object {
              "addTypename": true,
              "dataIdFromObject": [Function],
              "fragmentMatcher": HeuristicFragmentMatcher {},
              "storeFactory": [Function],
            },
            "data": ObjectCache {
              "data": Object {},
            },
            "optimistic": Array [],
            "silenceBroadcast": false,
            "typenameDocumentCache": WeakMap {},
            "watches": Array [],
          },
        },
        "version": "2.3.4",
        "watchQuery": [Function],
      }
    }
  >
    <withApollo(AddHistory)
      pageNumber={5}
      push={
        [MockFunction] {
          "calls": Array [
            Array [
              "/history/5",
            ],
          ],
        }
      }
    >
      <ApolloConsumer>
        <AddHistory
          client={
            ApolloClient {
              "__operations_cache__": Map {},
              "cache": InMemoryCache {
                "addTypename": true,
                "config": Object {
                  "addTypename": true,
                  "dataIdFromObject": [Function],
                  "fragmentMatcher": HeuristicFragmentMatcher {},
                  "storeFactory": [Function],
                },
                "data": ObjectCache {
                  "data": Object {},
                },
                "optimistic": Array [],
                "silenceBroadcast": false,
                "typenameDocumentCache": WeakMap {},
                "watches": Array [],
              },
              "defaultOptions": Object {},
              "disableNetworkFetches": false,
              "link": ApolloLink {
                "request": [Function],
              },
              "mutate": [Function],
              "query": [Function],
              "queryDeduplication": true,
              "queryManager": QueryManager {
                "dataStore": DataStore {
                  "cache": InMemoryCache {
                    "addTypename": true,
                    "config": Object {
                      "addTypename": true,
                      "dataIdFromObject": [Function],
                      "fragmentMatcher": HeuristicFragmentMatcher {},
                      "storeFactory": [Function],
                    },
                    "data": ObjectCache {
                      "data": Object {},
                    },
                    "optimistic": Array [],
                    "silenceBroadcast": false,
                    "typenameDocumentCache": WeakMap {},
                    "watches": Array [],
                  },
                },
                "deduplicator": ApolloLink {
                  "request": [Function],
                },
                "fetchQueryPromises": Map {},
                "idCounter": 2,
                "link": ApolloLink {
                  "request": [Function],
                },
                "mutationStore": MutationStore {
                  "store": Object {
                    "1": Object {
                      "error": null,
                      "loading": true,
                      "mutationString": "mutation {
  createPageHistory(number: 5) {
    number
    __typename
  }
}
",
                      "variables": Object {},
                    },
                  },
                },
                "onBroadcast": [Function],
                "queries": Map {
                  "1" => Object {
                    "document": Object {
                      "definitions": Array [
                        Object {
                          "directives": Array [],
                          "kind": "OperationDefinition",
                          "name": undefined,
                          "operation": "mutation",
                          "selectionSet": Object {
                            "kind": "SelectionSet",
                            "selections": Array [
                              Object {
                                "alias": null,
                                "arguments": Array [
                                  Object {
                                    "kind": "Argument",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "number",
                                    },
                                    "value": Object {
                                      "kind": "IntValue",
                                      "value": "5",
                                    },
                                  },
                                ],
                                "directives": Array [],
                                "kind": "Field",
                                "name": Object {
                                  "kind": "Name",
                                  "value": "createPageHistory",
                                },
                                "selectionSet": Object {
                                  "kind": "SelectionSet",
                                  "selections": Array [
                                    Object {
                                      "alias": null,
                                      "arguments": Array [],
                                      "directives": Array [],
                                      "kind": "Field",
                                      "name": Object {
                                        "kind": "Name",
                                        "value": "number",
                                      },
                                      "selectionSet": null,
                                    },
                                    Object {
                                      "kind": "Field",
                                      "name": Object {
                                        "kind": "Name",
                                        "value": "__typename",
                                      },
                                    },
                                  ],
                                },
                              },
                            ],
                          },
                          "variableDefinitions": Array [],
                        },
                      ],
                      "kind": "Document",
                      "loc": Object {
                        "end": 87,
                        "source": Object {
                          "body": "
    mutation {
      createPageHistory(number: 5) {
        number
      }
    },
    ",
                          "locationOffset": Object {
                            "column": 1,
                            "line": 1,
                          },
                          "name": "GraphQL request",
                        },
                        "start": 0,
                      },
                    },
                    "invalidated": false,
                    "lastRequestId": null,
                    "listeners": Array [],
                    "newData": null,
                    "observableQuery": null,
                    "subscriptions": Array [],
                  },
                },
                "queryDeduplication": true,
                "queryIdsByName": Object {},
                "queryStore": QueryStore {
                  "store": Object {},
                },
                "scheduler": QueryScheduler {
                  "inFlightQueries": Object {},
                  "intervalQueries": Object {},
                  "pollingTimers": Object {},
                  "queryManager": [Circular],
                  "registeredQueries": Object {},
                  "ssrMode": false,
                },
              },
              "reFetchObservableQueries": [Function],
              "resetStore": [Function],
              "resetStoreCallbacks": Array [],
              "ssrMode": false,
              "store": DataStore {
                "cache": InMemoryCache {
                  "addTypename": true,
                  "config": Object {
                    "addTypename": true,
                    "dataIdFromObject": [Function],
                    "fragmentMatcher": HeuristicFragmentMatcher {},
                    "storeFactory": [Function],
                  },
                  "data": ObjectCache {
                    "data": Object {},
                  },
                  "optimistic": Array [],
                  "silenceBroadcast": false,
                  "typenameDocumentCache": WeakMap {},
                  "watches": Array [],
                },
              },
              "version": "2.3.4",
              "watchQuery": [Function],
            }
          }
          pageNumber={5}
          push={
            [MockFunction] {
              "calls": Array [
                Array [
                  "/history/5",
                ],
              ],
            }
          }
        />
      </ApolloConsumer>
    </withApollo(AddHistory)>
  </ApolloProvider>
</MockedProvider>
`;
